# culingam

./: .gitignore  LICENSE  MANIFEST.in  Makefile  pyproject.toml  readme.md  setup.py
examples/: basic.py
src/basic/: basic.cu  basic_wrapper.cpp
src/basic/include/: basic.cuh
src/culingam/: __init__.py  base.py  basic.cu  basic_wrapper.cpp  directlingam.py  utils.py  varlingam.py
src/culingam/include/: basic.cuh
src/tests/: main.py  readme.md  unit.cu
