[build-system]
requires = ["setuptools-cuda-cpp", "flit_core >=3.2,<4", "wheel", "cython"]
build-backend = "flit_core.buildapi"

[project]
name = "culingam"
dependencies = ["numpy", "tqdm"]
authors = [{ name="Victor Akinwande", email="viktour19@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/viktour19/culingam"
Issues = "https://github.com/viktour19/culingam/issues"
