[build-system]
requires = ["setuptools", "wheel", "setuptools-cuda-cpp", "packaging", "pybind11"]

[project]
name = "culingam"
dependencies = ["numpy", "tqdm"]
authors = [{ name="Victor Akinwande", email="viktour19@gmail.com" }]
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/viktour19/culingam"
Issues = "https://github.com/viktour19/culingam/issues"
